@@ -5817,17 +5817,7 @@ static void makePlayerSay( LiveObject *inPlayer, char *inToSay ) {
         }
     if( strcmp( inToSay, curseBabyPhrase ) == 0 ) {
         isBabyShortcut = true;
-        }
-
-    
-    if( inPlayer->isTwin ) {
-        // block twins from cursing
-        cursedName = NULL;
-        
-        isYouShortcut = false;
-        isBabyShortcut = false;
-        }
-    
+        }    
     
     
     if( cursedName != NULL || isYouShortcut ) {
@@ -5865,8 +5855,7 @@ static void makePlayerSay( LiveObject *inPlayer, char *inToSay ) {
     int curseDistance = SettingsManager::getIntSetting( "curseDistance", 200 );
     
         
-    if( ! inPlayer->isTwin &&
-        cursedName == NULL &&
+    if( cursedName == NULL &&
         players.size() >= minActivePlayersForLanguages ) {
         
         // consider cursing in other languages
